# cmake-example

./: .gitignore  README.md
Demo1/: CMakeLists.txt  main.c
Demo2/: CMakeLists.txt  MathFunctions.c  main.c
Demo3/: CMakeLists.txt  main.c
Demo3/math/: CMakeLists.txt  MathFunctions.c
Demo4/: CMakeLists.txt  main.c
Demo4/math/: MathFunctions.c
Demo5/: CMakeLists.txt  main.c
Demo5/math/: CMakeLists.txt  MathFunctions.c  MathFunctions.h
Demo6/: CMakeLists.txt  main.c
Demo6/doc/: my_sort.txt
Demo6/include/: my_sort.h  my_types.h
Demo6/src/: CMakeLists.txt  my_sort.c
Demo7/main/: CMakeLists.txt
Demo7/main/src/: CMakeLists.txt  main.c
Demo7/merge_sort_lib/: CMakeLists.txt  main.c
Demo7/merge_sort_lib/include/: merge_sort.h
Demo7/merge_sort_lib/src/: CMakeLists.txt  merge_sort.c
Demo8/: CMakeLists.txt  main.c
Demo8/include/: mylib.h
Demo8/src/: CMakeLists.txt  mylib.c
